fixed stretching of logo on ios

--- a/public/styles/style-quiz.css
+++ b/public/styles/style-quiz.css
@@ -320,6 +320,9 @@ footer p {
     .navbar-collapse {
         text-align: center;
     }
+    .navbar-brand img {
+        width: inherit;
+    }
     .separation-dash {
         display: none;
     }
